--- a/app/src/main/res/layout/activity_recipe_example.xml
+++ b/app/src/main/res/layout/activity_recipe_example.xml
@@ -1,99 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3A101"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:background="#FFC107"
     tools:context=".RecipeExample">
 
 
-    <TextView
-        android:id="@+id/tvRecipeExampleRecipeName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="RecipeName..."
-        android:textStyle="bold"
-        android:layout_marginBottom="30dp"
-        android:textColor="@color/white"
-        android:textSize="30sp" />
-
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-        <TextView
-        android:id="@+id/tvRecipeExampleRecipeIngredientsTitle"
-        android:layout_width="120sp"
-        android:layout_height="wrap_content"
-        android:text="Ingredients:"
-        android:textStyle="bold"
-        android:layout_marginRight="40dp"
-        android:layout_gravity="start"
-        android:textColor="@color/white"
-        android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/tvRecipeExampleRecipeIngredients"
-                android:layout_width="120sp"
-                android:layout_height="wrap_content"
-                android:text="Ingredients...."
-                android:textColor="@color/white"
-                android:layout_marginRight="40dp"
-                android:layout_gravity="start"
-                android:textSize="18sp" />
-
-        </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/ivRecipeExampleRecipeImage"
-            android:layout_width="172dp"
-            android:layout_marginTop="50dp"
-            android:layout_height="172dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:contentDescription="Recipe Image"
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/RoundedImageView" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFC107"
+            android:elevation="8dp"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/tvRecipeExampleRecipeName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:text="Recipe Name"
+                android:textColor="#333333"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/tvRecipeExampleRecipeIngredientsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
+                android:text="Ingredients"
+                android:textColor="#555555"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvRecipeExampleRecipeIngredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:lineSpacingExtra="4dp"
+                android:text="////"
+                android:textColor="#666666"
+                android:textSize="16sp" />
+
+
+            <TextView
+                android:id="@+id/tvRecipeExampleRecipeInstructionsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
+                android:text="Instructions"
+                android:textColor="#555555"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvRecipeExampleRecipeInstructions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:lineSpacingExtra="4dp"
+                android:text="Instructions go here..."
+                android:textColor="#666666"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-
-    <TextView
-        android:id="@+id/tvRecipeExampleRecipeInstructionsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Instructions:"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/white"
-        android:textSize="22sp" />
-
-    <TextView
-        android:id="@+id/tvRecipeExampleRecipeInstructions"
-        android:layout_width="350sp"
-        android:layout_height="wrap_content"
-        android:text="Instructions...."
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-
-
-</LinearLayout>
-
-    </LinearLayout>
+</ScrollView>
