--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -7,6 +7,7 @@
     android:background="#D3A101"
     android:id="@+id/main"
     android:gravity="center"
+    android:padding="16dp"
     android:orientation="vertical"
     tools:context=".AlarmActivity">
 
@@ -17,18 +18,26 @@
         android:layout_height="wrap_content"
         android:text="Set an Alarm"
         android:textColor="@color/white"
+        android:fontFamily="sans-serif-medium"
         android:textSize="60sp"
         />
-    <TimePicker
-        android:id="@+id/tpTimeSelect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+
+
+
+<!--    <TimePicker-->
+<!--        android:id="@+id/tpTimeSelect"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:theme="@style/Widget.MaterialComponents.TimePicker"-->
+<!--        android:layout_marginBottom="32dp"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        />-->
     <Button
         android:id="@+id/btnSetAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#0e6e28"
+        android:textColor="#D3A101"
+        android:backgroundTint="@color/white"
         android:text="Set Alarm"
         android:layout_marginTop="16dp" />
 
