--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -66,5 +66,23 @@
             android:textColor="@color/black" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnChatWithAI"
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:layout_marginRight="15sp"
+            android:text="Chat With AI"
+            android:layout_gravity="center"
+
+            android:textColor="@color/black" />
+
+
+
+    </LinearLayout>
 
 </LinearLayout>
