--- a/app/src/main/res/layout/activity_upload_new_recipe.xml
+++ b/app/src/main/res/layout/activity_upload_new_recipe.xml
@@ -58,14 +58,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
-        <Button
-            android:id="@+id/btnSelectImage"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Image"
+            android:orientation="vertical"
+            android:gravity="center">
+        <Button
+            android:id="@+id/btnTakeImage"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="Take Image"
             android:textColor="#D3A101"
             android:textSize="18sp"
             />
+            <Button
+                android:id="@+id/btnSelectImage"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="Select Image"
+                android:textColor="#D3A101"
+                android:textSize="18sp"
+                />
+        </LinearLayout>
             <ImageView
             android:id="@+id/ivRecipeImage"
             android:layout_width="200dp"
