--- a/app/src/main/res/layout/activity_recipe_item.xml
+++ b/app/src/main/res/layout/activity_recipe_item.xml
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Recipe Title"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_gravity="bottom|start"
