--- a/app/src/main/res/layout/activity_favorites_list.xml
+++ b/app/src/main/res/layout/activity_favorites_list.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/favoritesLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3A101"
-    tools:context=".RecipeFavoriteListActivity">
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".FavoritesListActivity">
 
     <TextView
-        android:id="@+id/tvRecipeLists"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvFavoritesTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recipe List"
-        android:textColor="@color/white"
-        android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.065" />
+        android:text="Favorite Recipes"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginBottom="12dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFavorites"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clipToPadding="false"
+        android:paddingBottom="8dp" />
+
+</LinearLayout>
