--- a/app/src/main/res/layout/activity_recipe_example.xml
+++ b/app/src/main/res/layout/activity_recipe_example.xml
@@ -15,6 +15,10 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
         <ImageView
             android:id="@+id/ivRecipeExampleRecipeImage"
             android:layout_width="match_parent"
@@ -23,10 +27,23 @@
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/RoundedImageView" />
 
+            <ImageView
+                android:id="@+id/ivFavorite"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end|top"
+                android:layout_margin="12dp"
+                android:padding="6dp"
+                android:src="@drawable/baseline_star_border_24"
+                android:contentDescription="Favorite icon"
+                app:tint="#FFD700" />
+
+        </FrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFC107"
+            android:background="@color/white"
             android:elevation="8dp"
             android:orientation="vertical"
             android:padding="20dp">
