--- a/app/src/main/res/layout/activity_favorites_list.xml
+++ b/app/src/main/res/layout/activity_favorites_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#D3A101"
     android:padding="16dp"
     tools:context=".FavoritesListActivity">
 
@@ -13,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Favorite Recipes"
-        android:textSize="24sp"
+        android:textSize="50dp"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginBottom="12dp" />
