--- a/app/src/main/res/layout/activity_recipe_example.xml
+++ b/app/src/main/res/layout/activity_recipe_example.xml
@@ -36,7 +36,7 @@
                 android:padding="6dp"
                 android:src="@drawable/baseline_star_border_24"
                 android:contentDescription="Favorite icon"
-                app:tint="#FFD700" />
+                app:tint="#333333" />
 
         </FrameLayout>
 
