--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,84 +5,100 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D3A101"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/tvHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose your option"
-        android:textColor="@color/white"
-        android:textSize="34sp" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/homeToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#ff00ff"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        <Button
-            android:id="@+id/btnHomeRecipeList"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
-            android:layout_marginRight="15sp"
-            android:text="Recipe List"
-            android:layout_gravity="center"
+        <TextView
+            android:id="@+id/tvHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose your option"
+            android:textColor="@color/white"
+            android:textSize="34sp" />
 
-            android:textColor="@color/black" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnHomeUploadNewRecipe"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
-            android:layout_gravity="center"
-            android:text="Upload New Recipe"
-            android:textColor="@color/black" />
+            <Button
+                android:id="@+id/btnHomeRecipeList"
+                android:layout_width="150sp"
+                android:layout_height="150sp"
+                android:layout_gravity="center"
+                android:layout_marginRight="15sp"
+                android:text="Recipe List"
+
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/btnHomeUploadNewRecipe"
+                android:layout_width="150sp"
+                android:layout_height="150sp"
+                android:layout_gravity="center"
+                android:text="Upload New Recipe"
+                android:textColor="@color/black" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnHomeFavoriteRecipies"
+                android:layout_width="150sp"
+                android:layout_height="150sp"
+                android:layout_gravity="center"
+                android:layout_marginRight="15sp"
+                android:text="Favorite Recipies"
+
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/btnHomeAlarm"
+                android:layout_width="150sp"
+                android:layout_height="150sp"
+                android:layout_gravity="center"
+                android:text="Alarm"
+                android:textColor="@color/black" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnChatWithAI"
+                android:layout_width="150sp"
+                android:layout_height="150sp"
+                android:layout_gravity="center"
+                android:layout_marginRight="15sp"
+                android:text="Chat With AI"
+
+                android:textColor="@color/black" />
+
+        </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnHomeFavoriteRecipies"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
-            android:layout_marginRight="15sp"
-            android:text="Favorite Recipies"
-            android:layout_gravity="center"
-
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/btnHomeAlarm"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
-            android:layout_gravity="center"
-            android:text="Alarm"
-            android:textColor="@color/black" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnChatWithAI"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
-            android:layout_marginRight="15sp"
-            android:text="Chat With AI"
-            android:layout_gravity="center"
-
-            android:textColor="@color/black" />
-
-
-
-    </LinearLayout>
-
-</LinearLayout>
