--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -7,7 +7,7 @@
     tools:showIn="@layout/activity_recipe_example"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeExample">
+    tools:context=".RecipeView">
 
     <TextView
         android:layout_width="wrap_content"
