--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,10 +45,11 @@
 
                 <TextView
                     android:id="@+id/tvRecipeNoCurrentlyCookingRecipeName"
+                    android:paddingTop="-15dp"
                     android:paddingLeft="45dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nothing Cooking Yet"
+                    android:text="Loading Data..."
                     android:textColor="@color/white"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -66,27 +67,10 @@
             android:textStyle="bold"
             android:layout_marginTop="60dp"
             android:textSize="40dp" />
-
-        <LinearLayout
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/favoriteViewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:orientation="horizontal" />
-
-        <ImageView
-            android:id="@+id/ivHomeCurrentlyFavoriteRecipesImage1"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/RoundedImageView" />
-
-        <ImageView
-            android:id="@+id/ivHomeCurrentlyFavoriteRecipesImage2"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/RoundedImageView" />
-
-
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"/>
 </LinearLayout>
 
