--- a/app/src/main/res/layout/activity_recipe_view.xml
+++ b/app/src/main/res/layout/activity_recipe_view.xml
@@ -15,6 +15,15 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:elevation="4dp"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="300dp">
