--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_item_home"
+        android:title="Home"/>
+    <item
         android:id="@+id/menu_item_about"
         android:title="About the app"/>
     <item
