--- a/app/src/main/res/layout/activity_upload_new_recipe.xml
+++ b/app/src/main/res/layout/activity_upload_new_recipe.xml
@@ -9,6 +9,16 @@
     android:orientation="vertical"
     tools:context=".UploadNewRecipeActivity">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:elevation="4dp"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <TextView
         android:id="@+id/tvUploadNewRecipe"
         android:layout_width="wrap_content"
