--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D3A101"
-    android:gravity="center"
+    android:gravity="top|center"
     android:orientation="vertical"
     tools:context=".AboutAppActivity">
 
@@ -18,5 +18,14 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:elevation="4dp"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="This is the About screen."
+        android:layout_gravity="center_horizontal"
+        android:padding="16dp"
+        android:textSize="18sp"
+        android:textColor="@android:color/black" />
 
     </LinearLayout>
