--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -10,7 +10,7 @@
     android:paddingStart="24dp"
     android:paddingTop="40dp"
     android:paddingEnd="24dp"
-    android:gravity="center"
+    android:gravity="top|center"
     tools:context=".RecipeListActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,8 +19,10 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="4dp"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        android:popupTheme="@style/MyPopupMenuLight" />
+
+
+
 
     <TextView
         android:layout_width="wrap_content"
