--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#D3A101</item>
         <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -15,6 +15,11 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="Theme.MyRecipe.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+<!--    <style name="Theme.MyRecipe.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
+    <style name="MyPopupMenuLight" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:popupBackground">#FFFFFF</item> <!-- White background -->
+        <item name="android:textAppearance">@style/PopupMenuTextAppearance</item> <!-- Link text style -->
+    </style>
+
     <style name="Theme.MyRecipe.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
