--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,6 +19,8 @@
             android:textStyle="bold"
             android:layout_marginTop="40dp"
             android:textSize="40dp" />
+
+
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
@@ -49,7 +51,7 @@
                     android:paddingLeft="45dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Loading Data..."
+                    android:text="No Recipe Currently Cooking"
                     android:textColor="@color/white"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -67,10 +69,43 @@
             android:textStyle="bold"
             android:layout_marginTop="60dp"
             android:textSize="40dp" />
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/favoriteViewPager"
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+                <ImageView
+                    android:id="@+id/btnLeft"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/baseline_keyboard_arrow_left_24"
+                    android:contentDescription="Left"
+                    android:padding="8dp"
+                    android:layout_margin="4dp" />
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/favoriteViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:clipToPadding="false"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp" />
+
+
+                <ImageView
+                    android:id="@+id/btnRight"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/baseline_keyboard_arrow_right_24"
+                    android:contentDescription="Right"
+                    android:padding="8dp"
+                    android:layout_margin="4dp" />
+        </LinearLayout>
+
 </LinearLayout>
 
