--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -56,7 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Sign In"
-        android:textColor="#D3A101"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/etSignInPass"
         app:layout_constraintStart_toStartOf="@+id/etSignInEmail"
@@ -68,9 +68,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Sign In with Google"
-    android:textColor="#D3A101"
-
-    android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/btnSignInEmail"
         app:layout_constraintStart_toStartOf="@+id/btnSignInEmail"
         app:layout_constraintEnd_toEndOf="@+id/btnSignInEmail"
