--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -10,22 +10,15 @@
     tools:context=".AboutAppActivity">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="4dp"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tvAboutApp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is the About screen."
-        android:layout_gravity="center_horizontal"
-        android:padding="16dp"
-        android:textSize="18sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/white"
+        android:text="About App"
+        android:textStyle="bold"
+        android:textSize="50dp"
+        android:gravity="center"
+        android:paddingTop="16dp" />
 
     </LinearLayout>
