--- a/app/src/main/res/layout/activity_favorites_list.xml
+++ b/app/src/main/res/layout/activity_favorites_list.xml
@@ -11,15 +11,6 @@
     tools:context=".FavoritesListActivity">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="4dp"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
     <TextView
         android:id="@+id/tvFavoritesTitle"
         android:layout_width="match_parent"
@@ -28,6 +19,7 @@
         android:textSize="50dp"
         android:textStyle="bold"
         android:gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="12dp" />
 
     <androidx.recyclerview.widget.RecyclerView
