--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -5,21 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107"
+    android:background="#D3A101"
     android:orientation="vertical"
     android:paddingStart="24dp"
     android:paddingTop="40dp"
     android:paddingEnd="24dp"
     android:gravity="top|center"
     tools:context=".RecipeListActivity">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:popupTheme="@style/MyPopupMenuLight" />
 
 
 
