--- a/app/src/main/res/layout/activity_upload_new_recipe.xml
+++ b/app/src/main/res/layout/activity_upload_new_recipe.xml
@@ -4,20 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top|center"
-    android:background="#D3A101"
+    android:gravity="center"
+    android:background="@drawable/uploadnewrecipe"
     android:orientation="vertical"
     tools:context=".UploadNewRecipeActivity">
 
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="4dp"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <TextView
         android:id="@+id/tvUploadNewRecipe"
@@ -25,49 +16,58 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Upload a New Recipe"
+        android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="36sp"
+        android:textSize="45dp"
          />
 
     <EditText
         android:id="@+id/etUploadNewRecipeName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        android:inputType="text"
-        android:hint="Enter the name of the recipe:"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/roundededittext"
+        android:hint="Enter the name of the recipe"
+        android:textColorHint="#888888"
+        android:textColor="#888888"
+        android:textSize="18sp"
+        android:padding="12dp"
  />
 
     <EditText
         android:id="@+id/etUploadNewRecipeIngredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"        android:inputType="text"
-        android:hint="Enter the ingredients of the recipe:"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/roundededittext"
+        android:hint="Enter the ingredients of the recipe"
+        android:textColorHint="#888888"
+        android:textColor="#888888"
+        android:textSize="18sp"
+        android:padding="12dp"
          />
 
     <EditText
         android:id="@+id/etUploadNewRecipeInstructions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        android:inputType="text"
-        android:hint="Enter the instructions of the recipe:"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/roundededittext"
+        android:hint="Enter the instructions of the recipe"
+        android:textColorHint="#888888"
+        android:textColor="#888888"
+        android:textSize="18sp"
+        android:padding="12dp"
          />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:text="Take Image"
-            android:textColor="#D3A101"
+            android:textColor="@color/white"
             android:textSize="18sp"
             />
             <Button
@@ -86,7 +86,7 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:text="Select Image"
-                android:textColor="#D3A101"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 />
         </LinearLayout>
@@ -103,7 +103,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="50dp"
         android:text="SAVE"
-        android:textColor="#D3A101"
+        android:textColor="@color/white"
         android:textSize="28sp"
         />
 </LinearLayout>
