--- a/app/src/main/res/layout-w936dp/content_scrolling.xml
+++ b/app/src/main/res/layout-w936dp/content_scrolling.xml
@@ -6,7 +6,7 @@
     tools:showIn="@layout/activity_recipe_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeView">
+    tools:context=".RecipeViewActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="840dp"
