--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,13 +11,13 @@
 
 
         <TextView
-            android:id="@+id/tvCurrentlyCooking"
+            android:id="@+id/tvHomeCurrentlyCooking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Currently Cooking"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:textSize="40dp" />
 
 
@@ -25,30 +25,31 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="220dp"
+            android:gravity="center_horizontal"
             android:layout_marginBottom="16dp">
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/recipeCurrentlyCookingImageView"
-                    android:layout_width="match_parent"
+                    android:id="@+id/ivHomeRecipeCurrentlyCooking"
+                    android:layout_width="350dp"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="30dp"
                     android:scaleType="centerCrop"
                     android:contentDescription="Recipe Image"
                     app:shapeAppearanceOverlay="@style/RoundedImageView" />
 
                 <TextView
-                    android:id="@+id/tvRecipeCurrentlyCookingRecipeName"
+                    android:id="@+id/tvHomeRecipeCurrentlyCookingRecipeName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:layout_gravity="bottom|start"
+                    android:layout_gravity="bottom"
+                    android:layout_marginStart="200dp"
                     android:layout_margin="16dp"/>
 
                 <TextView
-                    android:id="@+id/tvRecipeNoCurrentlyCookingRecipeName"
-                    android:paddingTop="-15dp"
-                    android:paddingLeft="45dp"
+                    android:id="@+id/tvHomeNoRecipeCurrentlyCooking"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="No Recipe Currently Cooking"
@@ -79,7 +80,7 @@
             android:gravity="center_vertical">
 
                 <ImageView
-                    android:id="@+id/btnLeft"
+                    android:id="@+id/ivHomeArrowLeft"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/baseline_keyboard_arrow_left_24"
@@ -88,7 +89,7 @@
                     android:layout_margin="4dp" />
 
                 <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/favoriteViewPager"
+                    android:id="@+id/pagerHomeFavoriteView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -98,7 +99,7 @@
 
 
                 <ImageView
-                    android:id="@+id/btnRight"
+                    android:id="@+id/ivHomeArrowRight"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/baseline_keyboard_arrow_right_24"
