--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,7 +10,7 @@
     tools:context=".SignInActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SignIn"
@@ -31,7 +31,7 @@
         android:inputType="textEmailAddress"
         android:padding="6dp"
         android:background="@drawable/roundededittext"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="40dp"
