--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -20,7 +20,7 @@
         android:paddingTop="16dp" />
 
     <EditText
-        android:id="@+id/etMessage"
+        android:id="@+id/etChatWithAIMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -33,7 +33,7 @@
         android:padding="12dp" />
 
     <Button
-        android:id="@+id/btnSend"
+        android:id="@+id/btnChatWithAISend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
@@ -41,7 +41,7 @@
         android:text="Send"/>
 
     <TextView
-        android:id="@+id/tvResponse"
+        android:id="@+id/tvChatWithAIResponse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
