--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3A101"
+    android:background="@drawable/AlarmPhoto"
     android:id="@+id/main"
     android:gravity="top|center"
     android:padding="16dp"
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:text="Set an Alarm"
         android:textColor="@color/white"
+        android:layout_marginTop="250dp"
         android:fontFamily="sans-serif-medium"
         android:textSize="60sp"
         />
@@ -25,7 +26,7 @@
 
 
     <Button
-        android:id="@+id/btnSetAlarm"
+        android:id="@+id/btnAlarmSetAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#D3A101"
