--- a/app/src/main/res/layout/activity_upload_new_recipe.xml
+++ b/app/src/main/res/layout/activity_upload_new_recipe.xml
@@ -91,7 +91,7 @@
                 />
         </LinearLayout>
             <ImageView
-            android:id="@+id/ivRecipeImage"
+            android:id="@+id/ivUploadNewRecipeImage"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_margin="10sp"/>
