--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/AlarmPhoto"
+    android:background="@drawable/alarmphoto"
     android:id="@+id/main"
     android:gravity="top|center"
     android:padding="16dp"
